<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:title="Task" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            app:helperText="@string/TaskType">

            <RadioGroup
                android:id="@+id/taskExecutionGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rbInstant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Instant" />

                <RadioButton
                    android:id="@+id/rbScheduled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Scheduled" />

                <RadioButton
                    android:id="@+id/rbRecurring"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Recurring" />
            </RadioGroup>

            <TextView
                android:id="@+id/taskTypeHelper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="*Instant tasks are created and completed immediately."
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- Category -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            app:helperText="@string/label_category">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categoryGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                app:itemSpacing="8dp"
                app:singleSelection="true">

                <!-- Add more Category Chip Dynamically-->
                <com.google.android.material.chip.Chip
                    android:id="@+id/addNewChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+ New" />
            </com.google.android.material.chip.ChipGroup>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Task Title -->
        <!-- Restrict to Only 1 line -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_title"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_description"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Recurrence Section (visible only if Recurring selected) -->
        <LinearLayout
            android:id="@+id/recurrenceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="visible">

            <!-- Recurrence Frequency -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="Repeat"></com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupWeekdays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="true"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Mon" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Tue" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Wed" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipThu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Thu" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Fri" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Sat" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Sun" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/datetimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:baselineAligned="false"
            android:gravity="center|center_vertical"
            android:visibility="gone"
            android:weightSum="2">
            <!-- Start DateTime -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/startDateLayout"
                    style="@style/TextAppearance.MaterialCalendarWidget.Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_start_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtStartDateTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="-"
                android:textAlignment="center"
                android:textSize="26sp" />
            <!-- Due DateTime -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dueDateLayout"
                    style="@style/TextAppearance.MaterialCalendarWidget.Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/hint_due_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDueDateTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- Priority Dropdown -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priorityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            app:helperText="@string/label_priority">

            <Spinner
                android:id="@+id/autoCompletePriority"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/label_priority"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/reminderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:helperText="@string/label_reminder">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ReminderTimeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reminderTimePicker"
                    android:timePickerMode="spinner"
                    android:visibility="invisible"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:orientation="vertical">
            <!-- Save Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Save Task"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
